--- a/src/JenkinsNotificationTool/Properties/Resources.resx
+++ b/src/JenkinsNotificationTool/Properties/Resources.resx
@@ -152,6 +152,11 @@
     <value>フェード</value>
     <comment>フェードの文言です。</comment>
   </data>
+  <data name="FailedConnectionWebSocketMessage" xml:space="preserve">
+    <value>Jenkins とのWebSocket 通信接続に失敗しました。
+URI が正しいかどうか、Jenkins が起動しているかどうかを確認してください。</value>
+    <comment>WebSocket URIで接続確立に失敗した場合のエラーメッセージです。</comment>
+  </data>
   <data name="FailedSaveConfiguration" xml:space="preserve">
     <value>設定ファイルの保存中にエラーが発生しました。
 設定ファイルをエディタなどで開いている場合はエディタを閉じてから、もう一度保存ボタンをクリックしてください。</value>
@@ -224,6 +229,10 @@
   <data name="RecievedHistoryCountHeader" xml:space="preserve">
     <value>受信履歴表示数</value>
     <comment>実行結果受信履歴一覧に表示する設定項目のヘッダー文言です。</comment>
+  </data>
+  <data name="RequiredErrorMessage" xml:space="preserve">
+    <value>何か入力してください。</value>
+    <comment>未入力項目のエラーメッセージです。</comment>
   </data>
   <data name="Save" xml:space="preserve">
     <value>保存</value>
